--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -4,7 +4,7 @@ header {
 }
 
 header h1 {
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 footer {
@@ -41,19 +41,15 @@ hr {
 }
 
 .main .section h2 {
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 .main .section h3 {
-    font-size: 2em;
+    font-size: 1.8em;
 }
 
 .main .section h4 {
     font-size: 1.5em;
-}
-
-.main .section h5 {
-    font-size: 1.2em;
 }
 
 .main .section hr {
@@ -70,13 +66,9 @@ input {
 
 /* BPM */
 
-.input {
-    margin: 5px auto;
-}
-
 #bpm {
     width: 80%;
-    font-size: 3.5em;
+    font-size: 3em;
 }
 
 #bpm-ctrl {
@@ -137,6 +129,7 @@ input {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin: 5px auto;
 }
 
 #beats-ctrl button {
@@ -208,17 +201,21 @@ input {
 }
 
 .text p {
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
 /* badge */
 footer .badges {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 footer .badge {
     margin: 0px 5px;
+}
+
+footer .copyright {
+    font-size: 0.8em;
 }
