✨support update and download

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -40,8 +40,10 @@ a {
 
 button {
     border: none;
+    cursor: pointer;
 }
 
 * {
     font-family: 'Bauhaus', sans-serif;
+    font-weight: lighter;
 }
