--- a/src/css/decoration.css
+++ b/src/css/decoration.css
@@ -19,11 +19,11 @@ hr {
     transform: scale(1.1);
 }
 
-.play {
+.stop {
     background-position: 100% 100%;
 }
 
-.stop {
+.play {
     background-position: 0% 0%;
 }
 
@@ -119,6 +119,18 @@ hr {
     background-position: 0% 0%;
 }
 
+button.action {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    background-image: linear-gradient(135deg, #FDEB71 10%, #F8D800 100%);
+    transition: 0.5s;
+}
+
+button.action:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transform: scale(1.05);
+}
+
 input {
     background-color: transparent;
+    border: none;
 }
