--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -22,7 +22,6 @@ button {
     line-height: 2em;
 }
 
-/*  */
 .main {
     width: 95%;
     margin: 0px auto;
@@ -37,7 +36,7 @@ hr {
 }
 
 .main .section {
-    margin: 20px 10px 20px 10px;
+    padding: 20px 10px 20px 10px;
 }
 
 .main .section h2 {
@@ -63,8 +62,6 @@ input {
     border: none;
     text-align: center;
 }
-
-/* BPM */
 
 #bpm {
     width: 80%;
@@ -100,7 +97,7 @@ input {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 20px 0px;
+    margin-top: 20px;
 }
 
 #dot-list li {
@@ -110,7 +107,6 @@ input {
     border-radius: 50%;
 }
 
-/* play stop */
 #play {
     width: 3em;
     height: 3em;
@@ -118,7 +114,6 @@ input {
     font-size: 2em;
 }
 
-/* beats */
 #beats {
     width: 40%;
     font-size: 2em;
@@ -172,7 +167,6 @@ input {
     height: 100%;
 }
 
-/* sound style */
 #wave-list {
     margin: 10px;
     display: flex;
@@ -183,9 +177,9 @@ input {
 }
 
 #wave-list li {
-    margin: 4px;
-    padding: 5px;
-    border-radius: 10px;
+    margin: 5px;
+    padding: 10px;
+    border-radius: 50%;
 }
 
 #wave-list li img {
@@ -194,17 +188,32 @@ input {
     vertical-align: middle;
 }
 
-
-/* history */
-.text {
-    margin: 10px auto;
+#wave-list .wave-item {
+    margin: 0px 10px;
 }
 
-.text p {
-    font-size: 1em;
+#network-disconnected p {
+    margin-top: 10px;
 }
 
-/* badge */
+.platform {
+    padding-top: 5px;
+}
+
+.platform .download-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+}
+
+button.action {
+    margin: 0px 5px;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
 footer .badges {
     display: flex;
     flex-direction: column;
