--- a/src/css/decoration.css
+++ b/src/css/decoration.css
@@ -6,6 +6,33 @@ hr {
     background-image: linear-gradient(90deg, transparent 0%, #3f3f3f 50%, transparent 100%);
 }
 
+.banner {
+    width: 100%;
+    overflow: hidden;
+}
+
+@media (max-width: 768px) {
+    .banner p {
+        animation: scroll 15.0s linear infinite;
+    }
+}
+
+@media (min-width: 768px) {
+    .banner p {
+        animation: scroll 25.0s linear infinite;
+    }
+}
+
+@keyframes scroll {
+    0% {
+        transform: translate(100vw, 0);
+    }
+
+    100% {
+        transform: translate(-100%, 0);
+    }
+}
+
 #play {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     background-size: 200% 200%;
