--- a/src/css/decoration.css
+++ b/src/css/decoration.css
@@ -6,30 +6,23 @@ hr {
     background-image: linear-gradient(90deg, transparent 0%, #3f3f3f 50%, transparent 100%);
 }
 
-.banner {
-    width: 100%;
-    overflow: hidden;
+.marquee-container .marquee {
+    animation: scroll 25.0s linear infinite;
 }
 
 @media (max-width: 768px) {
-    .banner p {
+    .marquee-container .marquee {
         animation: scroll 15.0s linear infinite;
     }
 }
 
-@media (min-width: 768px) {
-    .banner p {
-        animation: scroll 25.0s linear infinite;
-    }
-}
-
 @keyframes scroll {
-    0% {
-        transform: translate(100vw, 0);
+    from {
+        transform: translateX(100vw);
     }
 
-    100% {
-        transform: translate(-100%, 0);
+    to {
+        transform: translateX(-100%);
     }
 }
 
@@ -114,16 +107,16 @@ hr {
     background-position: 100% 100%;
 }
 
-#sub-box .sub-row img {
+#sub-box .sub-item img {
     filter: invert(40%);
     transition: 0.5s;
 }
 
-#sub-box .sub-row img:hover {
+#sub-box .sub-item img:hover {
     filter: invert(70%);
 }
 
-#sub-box .sub-row .active img {
+#sub-box .sub-item.active img {
     filter: invert(100%);
     transform: scale(1.2);
 }
