--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,6 +14,19 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Bauhaus', sans-serif;
+    font-weight: lighter;
+}
+
+html {
+    font-size: 16px;
+    --size-xxl: 3rem;
+    --size-xl: 2rem;
+    --size-l: 1.8rem;
+    --size-m: 1.5rem;
+    --size-s: 1rem;
+    --size-xs: 0.8rem;
+    --size-xxs: 0.5rem;
 }
 
 li {
@@ -41,9 +54,4 @@ a {
 button {
     border: none;
     cursor: pointer;
-}
-
-* {
-    font-family: 'Bauhaus', sans-serif;
-    font-weight: lighter;
 }
