✨add download counter ⚒️layout adjustments

--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,3 +1,13 @@
+#language {
+    background-color: transparent;
+    margin-bottom: var(--size-xs);
+}
+
+#language img {
+    vertical-align: middle;
+    height: var(--size-xl);
+}
+
 .footer {
     margin-top: 1rem;
     margin-bottom: 2rem;
