--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,30 +1,31 @@
-#language {
-    background-color: transparent;
-    margin-bottom: var(--size-xs);
-}
-
-#language img {
-    vertical-align: middle;
-    height: var(--size-xl);
-}
-
-.footer {
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+.Footer {
+    margin: 1rem 0;
     text-align: center;
 }
 
-.footer .badges {
+.Footer__badges {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.footer .badges .badge {
+.Footer__badges .badge {
     margin: 0 5px;
 }
 
-.footer .copyright {
+.Footer__copyright {
+    margin-top: 8px;
     font-size: 0.8em;
 }
+
+.Footer__language button {
+    background-color: transparent;
+    margin-bottom: var(--size-xs);
+}
+
+.Footer__language button img {
+    vertical-align: middle;
+    height: var(--size-xl);
+}
+
