--- a/src/css/components/subdivision.css
+++ b/src/css/components/subdivision.css
@@ -1,4 +1,4 @@
-#sub-box {
+.Subdivision__list {
     width: 90%;
     margin: 0 auto;
     display: flex;
@@ -7,29 +7,29 @@
     flex-wrap: wrap;
 }
 
-#sub-box .sub-item {
+.Subdivision__list .item {
     width: 25%;
     height: var(--size-l);
     margin: var(--size-s) auto 0 auto;
 }
 
 @media (max-width: 375px) {
-    #sub-box .sub-item {
+    .Subdivision__list .item {
         width: 50%;
     }
 }
 
-#sub-box .sub-item img {
+.Subdivision__list .item img {
     height: 100%;
     filter: invert(40%);
     transition: 0.5s;
 }
 
-#sub-box .sub-item.active img {
+.Subdivision__list .item.active img {
     filter: invert(100%);
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
-#sub-box .sub-item img:hover {
+.Subdivision__list .item img:hover {
     filter: invert(70%);
 }
