--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'Bauhaus';
-    src: url('../assets/fonts/Bauhaus93.eot');
-    src: url('../assets/fonts/Bauhaus93.eot?#iefix') format('embedded-opentype'),
-        url('../assets/fonts/Bauhaus93.woff2') format('woff2'),
-        url('../assets/fonts/Bauhaus93.woff') format('woff'),
-        url('../assets/fonts/Bauhaus93.ttf') format('truetype'),
-        url('../assets/fonts/Bauhaus93.svg#Bauhaus93') format('svg');
+    font-family: 'Comic Sans MS Fallback';
+    src: url('../assets/fonts/ComicSansMS.eot');
+    src: url('../assets/fonts/ComicSansMS.eot?#iefix') format('embedded-opentype'),
+    url('../assets/fonts/ComicSansMS.woff2') format('woff2'),
+    url('../assets/fonts/ComicSansMS.woff') format('woff'),
+    url('../assets/fonts/ComicSansMS.ttf') format('truetype'),
+    url('../assets/fonts/ComicSansMS.svg#ComicSansMS') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -14,12 +14,25 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Bauhaus', sans-serif;
+}
+
+.en * {
+    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', sans-serif;
+}
+
+.ru * {
+    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', sans-serif;
+}
+
+.zh * {
+    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', 'STHupo', sans-serif;
     font-weight: lighter;
 }
 
 html {
     font-size: 16px;
+
+    --size-xxxl: 4rem;
     --size-xxl: 3rem;
     --size-xl: 2rem;
     --size-l: 1.8rem;
@@ -51,7 +64,76 @@ a {
     text-decoration: none;
 }
 
+input {
+    border: none;
+    text-align: center;
+    background-color: transparent;
+}
+
 button {
     border: none;
     cursor: pointer;
+}
+
+.flex-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+body {
+    background-image: linear-gradient(315deg, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
+}
+
+.Main {
+    width: 95%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.Main .Section {
+    padding: var(--size-s) var(--size-xs);
+}
+
+.Main .Section h2 {
+    margin: 4px 0 8px 0;
+    font-size: var(--size-l);
+}
+
+.Main .Section h3 {
+    margin: 4px 0 8px 0;
+    font-size: var(--size-m);
+}
+
+.Main .Section h4 {
+    font-size: calc(var(--size-m) * 0.8);
+}
+
+hr.divider {
+    width: 90%;
+    margin: 0 auto;
+    height: 2px;
+    border: none;
+    background-image: linear-gradient(90deg, transparent 0%, #3f3f3f 50%, transparent 100%);
+}
+
+.shadow-light {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+    transition: 0.5s;
+}
+
+.shadow-light:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transform: scale(1.05);
+}
+
+.expandable {
+    overflow-y: hidden;
+    max-height: 0;
+    transition: 1s ease-in-out;
+}
+
+.expandable.expand {
+    max-height: 500px;
 }
