--- a/src/css/index.css
+++ b/src/css/index.css
@@ -86,6 +86,10 @@ body {
     background-image: linear-gradient(315deg, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
 }
 
+#app {
+    padding-top: var(--status-bar-height);
+}
+
 .Main {
     width: 95%;
     margin: 0 auto;
