--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Comic Sans MS Fallback';
-    src: url('../assets/fonts/ComicSansMS.eot');
-    src: url('../assets/fonts/ComicSansMS.eot?#iefix') format('embedded-opentype'),
-    url('../assets/fonts/ComicSansMS.woff2') format('woff2'),
-    url('../assets/fonts/ComicSansMS.woff') format('woff'),
-    url('../assets/fonts/ComicSansMS.ttf') format('truetype'),
-    url('../assets/fonts/ComicSansMS.svg#ComicSansMS') format('svg');
+    src: url('../../public/fonts/ComicSansMS.eot');
+    src: url('../../public/fonts/ComicSansMS.eot?#iefix') format('embedded-opentype'),
+        url('../../public/fonts/ComicSansMS.woff2') format('woff2'),
+        url('../../public/fonts/ComicSansMS.woff') format('woff'),
+        url('../../public/fonts/ComicSansMS.ttf') format('truetype'),
+        url('../../public/fonts/ComicSansMS.svg#ComicSansMS') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
